# pyNetCorCat

./: README.md  pyproject.toml
pynetcor/: CMakeLists.txt  __init__.py  cor.py
pynetcor/_core/: cor.cpp  mutual_info.cpp  pyNetCor.cpp
src/: CMakeLists.txt  cor.cpp  cor.h  mutual_info.cpp  mutual_info.h  options.h
tests/: test_mutual_info.py  test_phi.py
